# Jolly

./: .gitignore  README.md  pyproject.toml  test.py
.github/: CODEOWNERS
.github/workflows/: linting.yml
examples/: helloworld.py  main.py
examples/modulezip/hello/: __init__.py
examples/zipped/: __init__.py
examples/zipped/hello/: hello.py
jolly/: __init__.py  baseimporter.py  cli.py  dirimporter.py  importast.py  jolly.py  memimporter.py  memzip.py  temp.py
